[gd_scene load_steps=9 format=3 uid="uid://coh81ssve2eub"]

[ext_resource type="Script" path="res://UI/PlayerCursor.gd" id="1_nd8ph"]
[ext_resource type="Shader" path="res://UI/mode_select_character.gdshader" id="2_5f1si"]
[ext_resource type="Texture2D" uid="uid://c0a17myywag3r" path="res://Assets/UI/mouse/Triangle Mouse icon 1.png" id="3_qial4"]
[ext_resource type="Texture2D" uid="uid://bpwf71i4p4541" path="res://Assets/UI/mouse/Triangle Mouse icon 2.png" id="4_b0ipc"]
[ext_resource type="Texture2D" uid="uid://xpwek4y260b1" path="res://Assets/UI/mouse/Triangle Mouse icon 3.png" id="5_3ffss"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_66eew"]
shader = ExtResource("2_5f1si")
shader_parameter/outlineColor = Color(0.772549, 0, 0, 1)
shader_parameter/outlineWidth = 0.05

[sub_resource type="SpriteFrames" id="SpriteFrames_xswc5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qial4")
}, {
"duration": 1.0,
"texture": ExtResource("4_b0ipc")
}, {
"duration": 1.0,
"texture": ExtResource("5_3ffss")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_r6c2y"]
radius = 7.0

[node name="PlayerCursor" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_nd8ph")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_66eew")
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_xswc5")
autoplay = "default"
frame = 1
frame_progress = 0.258186

[node name="Label" type="Label" parent="."]
offset_top = -24.0
offset_right = 40.0
offset_bottom = -1.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, -5)
shape = SubResource("CircleShape2D_r6c2y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -5)
shape = SubResource("CircleShape2D_r6c2y")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
